--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,118 @@
 /* You can add global styles to this file, and also import other style files */
+:root {
+  --background-color: #e7e7dd;
+  --card-color: #008a93;
+  --text-color: #ffffff;
+  --text-placeholder-color: #ffffff9a;
+  --primary-color: #00597d;
+  --secondary-color: #02305a;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+
+  outline: none;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+}
+
+body {
+  display: flex;
+  flex-wrap: wrap;
+
+  grid-gap: 2em;
+  padding: 1em;
+
+  background-color: var(--background-color);
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+
+  padding: 0.8em;
+
+  background-color: var(--card-color);
+  border-radius: 0.4em;
+}
+
+.container__title {
+  align-self: center;
+  margin-bottom: 0.5em;
+
+  font-size: 1em;
+
+  color: var(--secondary-color);
+}
+
+.container__description {
+  font-size: 0.8em;
+  color: var(--text-color);
+}
+
+.container__form {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  margin: 0.5em 0;
+}
+
+.form__input {
+  width: 100%;
+  padding: 0.5em;
+  margin-right: 0.5em;
+
+  background-color: transparent;
+  color: var(--text-color);
+  border-bottom: 1px solid var(--text-color);
+
+  transition: transform 0.2s, border-bottom 0.2s;
+}
+
+.form__input::placeholder {
+  font-size: 1.15em;
+  color: var(--text-placeholder-color);
+}
+
+.form__input:focus {
+  transform: scale(0.95);
+  border-bottom: 1px solid var(--text-color);
+}
+
+.form__button {
+  text-align: center;
+
+  padding: 0.5em 2.5em;
+  border-radius: 0.4em;
+
+  font-weight: bold;
+
+  color: var(--text-color);
+
+  background-color: var(--primary-color);
+  transition: transform 0.2s, background-color 0.2s;
+}
+.form__button:active {
+  transform: scale(0.9);
+}
+
+.form__button:hover {
+  background-color: var(--secondary-color);
+}
+
+.container__output {
+  width: 100%;
+  height: 60px;
+
+  padding: 0.4em;
+
+  border: 1px solid var(--primary-color);
+  color: var(--text-color);
+  background-color: transparent;
+}
