--- a/src/styles.css
+++ b/src/styles.css
@@ -19,21 +19,21 @@
 }
 
 body {
-  display: flex;
-  flex-wrap: wrap;
-
-  grid-gap: 2em;
-  padding: 1em;
-
   background-color: var(--background-color);
 }
-
+.component-root {
+  display: flex;
+  flex-wrap: wrap;
+  grid-gap: 2em;
+  padding: 1em;
+}
 .container {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
 
+  max-width: 330px;
   padding: 0.8em;
 
   background-color: var(--card-color);
@@ -111,6 +111,8 @@ body {
   height: 60px;
 
   padding: 0.4em;
+
+  resize: none;
 
   border: 1px solid var(--primary-color);
   color: var(--text-color);
