--- a/src/app/components/grasshopper/grasshopper.component.html
+++ b/src/app/components/grasshopper/grasshopper.component.html
@@ -1,15 +1,11 @@
 <div class="container">
   <h1 class="container__title">Grasshopper - Personalized Message</h1>
-  <pre class="container__description">
-  Função que fornece uma saudação personalizada. 
-  Esta função recebe dois parâmetros, <strong>name</strong> e <strong>owner</strong>.
-  
-  Caso o name seja igual ao owner retorne: 'Hello boss'.
-  Caso contrário retorne: 'Hello guest.
-  
-  Ex: John, John
-      </pre
-  >
+  <p class="container__description">
+    Função que fornece uma saudação personalizada. Esta função recebe dois
+    parâmetros, <strong>name</strong> e <strong>owner</strong>. Caso o name seja
+    igual ao owner retorne: 'Hello boss'. Caso contrário retorne: 'Hello guest.
+    Ex: John, John
+  </p>
   <div class="container__form">
     <input #input class="form__input" type="text" placeholder="name, owner" />
     <button (click)="greet(input.value)" class="form__button">Run</button>
