--- a/src/styles.css
+++ b/src/styles.css
@@ -31,9 +31,10 @@ body {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: center;
+  justify-content: flex-start;
 
   max-width: 330px;
+  height: 300px;
   padding: 0.8em;
 
   background-color: var(--card-color);
