--- a/src/app/components/magic-function/magic-function.component.html
+++ b/src/app/components/magic-function/magic-function.component.html
@@ -2,12 +2,14 @@
   <h1 class="container__title">Magic Function</h1>
   <p class="container__description">
     Função que aceita um número dinâmico de parâmetros dos tipos: number, string
-    e boolean. E retorna o parâmetros concatenados como um hífen. Caso seja
-    passado algum parâmetro que não seja dos tipos mencionados retorne undefined
+    e boolean.<br />E retorna o parâmetros concatenados como um hífen. Caso seja
+    passado algum parâmetro que não seja dos tipos mencionados retorne
+    undefined<br /><br />
+    EX: 1, 2, 3, 4, 5
   </p>
   <div class="container__form">
-    <input #input class="form__input" type="text" placeholder="name, owner" />
-    <button (click)="magicFunction(input.value)" class="form__button">
+    <input #input class="form__input" type="text" placeholder="a, b, c, d, e" />
+    <button (click)="receiveAndProcessData(input.value)" class="form__button">
       Run
     </button>
   </div>
