💄 style: change background color

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 :root {
-  --background-color: #e7e7dd;
+  --background-color: #dbdbc5;
   --card-color: #008a93;
   --text-color: #ffffff;
   --text-placeholder-color: #ffffff9a;
