--- a/src/styles.css
+++ b/src/styles.css
@@ -23,9 +23,10 @@ body {
 }
 .component-root {
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   grid-gap: 2em;
-  padding: 1em;
+  padding: 3em;
 }
 .container {
   display: flex;
