✨ feat: creation of component count-by-x

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <ck-grasshopper></ck-grasshopper>
 <ck-magic-function></ck-magic-function>
 <ck-human-cat-dog-years></ck-human-cat-dog-years>
+<ck-count-by-x></ck-count-by-x>
