✨ feat: creation of component traffic-light

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,4 @@
 <ck-magic-function></ck-magic-function>
 <ck-human-cat-dog-years></ck-human-cat-dog-years>
 <ck-count-by-x></ck-count-by-x>
+<ck-traffic-light></ck-traffic-light>
