✨ feat: creation of component sort-and-star

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,4 @@
 <ck-human-cat-dog-years></ck-human-cat-dog-years>
 <ck-count-by-x></ck-count-by-x>
 <ck-traffic-light></ck-traffic-light>
+<ck-sort-and-star></ck-sort-and-star>
