--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,4 @@
 <ck-count-by-x></ck-count-by-x>
 <ck-traffic-light></ck-traffic-light>
 <ck-sort-and-star></ck-sort-and-star>
+<ck-musical-notes></ck-musical-notes>
