✨ feat: creation of component ensure-question

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,4 @@
 <ck-traffic-light></ck-traffic-light>
 <ck-sort-and-star></ck-sort-and-star>
 <ck-musical-notes></ck-musical-notes>
+<ck-ensure-question></ck-ensure-question>
