✨ feat: creation of component alternating-case

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,3 +6,4 @@
 <ck-sort-and-star></ck-sort-and-star>
 <ck-musical-notes></ck-musical-notes>
 <ck-ensure-question></ck-ensure-question>
+<ck-alternating-case></ck-alternating-case>
