✨ feat: creation of component avoiding-false-values

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,3 +7,4 @@
 <ck-musical-notes></ck-musical-notes>
 <ck-ensure-question></ck-ensure-question>
 <ck-alternating-case></ck-alternating-case>
+<ck-avoiding-false-values></ck-avoiding-false-values>
